Preventing clipping of images on intro swiper.

--- a/src/index.css
+++ b/src/index.css
@@ -62,7 +62,7 @@ canvas.visible {
 }
 
 .swiper-wrapper {
-    @apply items-center pb-10 visible
+    @apply items-center pb-10 overflow-visible
 }
 .swiper-pagination-bullet {
     @apply bg-black dark:bg-white
@@ -72,6 +72,9 @@ canvas.visible {
 }
 .swiper-button-next {
     @apply text-black dark:text-white
+}
+.swiper {
+  @apply overflow-visible
 }
 
 
